--- a/backend/domain.yml
+++ b/backend/domain.yml
@@ -12,10 +12,29 @@ intents:
 - bot_challenge
 - insult
 - skip_to_activity
+- smart_goals
 - tell_more
 - share_problems
 - out_of_scope
 - greet_with_question
+- set_goal
+- yesset
+- dontset
+- goal1
+- goal2
+- goal3
+- yesgoalspecific
+- notgoalspecific
+- yesmeasuregoal
+- nomeasuregoal
+- achievable
+- notachievable
+- realistic
+- notrealistic
+- timely
+- nottimely
+- Startgame
+- denyStartgame
 
 entities:
 - name
@@ -31,6 +50,7 @@ slots:
     type: unfeaturized
   emotion_intensity:
     type: unfeaturized
+  
   
   name:
     type: text
@@ -68,6 +88,7 @@ slots:
     - 'low'
     - 'moderate'
     - 'high'
+
 responses:
   utter_greet:
   - text: Hello, I'm Bot!
@@ -79,23 +100,23 @@ responses:
   utter_helloagain:
   - text: Hello Again, How are you feeling Today ?
     buttons:
-      - title: "Awesome 😁"
-        payload: '/mood_great'
+    - title: "Awesome 😁"
+      payload: '/mood_great'
         
-      - title: "Really Good 😀"
-        payload: '/mood_great'
+    - title: "Really Good 😀"
+      payload: '/mood_great'
        
-      - title: "Good 🙂"
-        payload: '/mood_great'
+    - title: "Good 🙂"
+      payload: '/mood_great'
+         
+    - title: "Bad 😑"
+      payload: '/mood_unhappy'
         
-      - title: "Bad 😑"
-        payload: '/mood_unhappy'
-        
-      - title: "Really Bad 😔 "
-        payload: '/mood_unhappy'
+    - title: "Really Bad 😔 "
+      payload: '/mood_unhappy'
        
-      - title: "Awful 😣 "
-        payload: '/mood_unhappy'
+    - title: "Awful 😣 "
+      payload: '/mood_unhappy'
         
   utter_ask_name:
   - text: What's your name?
@@ -115,7 +136,7 @@ responses:
   - text: How are you?
   - text: How are you today?
   utter_ask_feeling: # Add options here-Anu
-  - text: How are you feeling today?
+  - text: Hi!! How are you feeling today?
     buttons:
       - title: "Awesome 😁"
         payload: '/mood_great'
@@ -143,31 +164,62 @@ responses:
   - text: Good! It's great to hear that. I noticed you indicated that you were feeling
       some negative emotions on your questionnaire earlier. Are you still feeling
       that way?
+    buttons:
+    - title: "Yes"
+      payload: '/affirm'
+      
+    - title: "No"
+      payload: '/deny'
+      
   utter_ask_why_bad:
   - text: I'm sorry to hear that you're feeling that way. Would you like to tell me more about it?
+    buttons:
+    - title: "Yes"
+      payload: '/affirm'
+      
+    - title: "May be later"
+      payload: '/deny'
+  
   utter_happy_offer_chat:
   - text: Good! It's great to hear that. Soon, we'll play a quick game, but we can
       chat a bit first, if you'd like. If there are any problems or stressors you'd
       like to vent about, you have the opportunity to do so now. Is there anything
       you'd like to talk to me about?
+    buttons:
+    - title: "Yes"
+      payload: '/affirm'
+      
+    - title: "May be later"
+      payload: '/deny'
+
   utter_denied_chat:
   - text: Okay. Lots of us have stressors that may not always be on our minds, but
       when we are thinking about them, they can really bring about some negative feelings.
       I'd like to show you a simple technique that can help you manage your negative
       emotions when they do come up.
+
   utter_goodbye:
   - text: Bye
   utter_denied_why_bad:
   - text: Are you sure? Sometimes it can feel good to get it off your chest. However,
       if you don't feel comfortable talking about it right now, I can just share some
       ideas to help you feel better.
+    buttons:
+    - title: "Yes, I am sure, Let's skip to the activity"
+      payload: '/skip_to_activity'
+      
+    - title: "No, I'd actually like to tell you about it"
+      payload: '/tell_more'
+
   utter_tell_me_sad:
-  - text: I'm glad to hear that you feel comfortable telling me about it. You can
-      go ahead and tell me about what's been going on, the way you're feeling and why.
+  - text: I'm glad to hear that you feel comfortable telling me about it. I will give you an opportunity to do
+      so in just a moment. First, I just have a few questions for you.
   utter_tell_me_happy:
   - text: Great! You can go ahead and tell me about what's been going on, the way you're feeling and why.
   utter_ask_emotion_intensity:
-  - text: "How intense have these emotions been for you?"
+  - text: I'm glad to hear that you feel comfortable telling me about it. I will give you an opportunity to do
+          so in just a moment. First, I just have a few questions for you.
+          How intense have these emotions been for you?
     buttons:
     - title: "Very mild"
       payload: '/share_problems{"emotion_intensity": 1}'
@@ -214,6 +266,170 @@ responses:
   utter_skip_to_activity:
   - text: Okay. I'd like to show you a simple technique that can help you manage your
       negative emotions.
+  utter_start_smartgoals:
+  - text: Before you go, there are two things I would like to do with you.The first step is setting some goals with you and the second is to do a quick mindfulness exercise.Let's start with the goals.
+  utter_intro_smartgoals:
+  - text: Research shows that doing things that give us a sense of accomplishment helps us feel better about ourselves. These are usually things we care about, skills we want to learn, or hobbies we enjoy, and we want to get better at. These should challenge us at least a little bit so we can make progress over time but still should be possible. One way we can improve in these things is to set small goals for ourselves.
+  utter_ask_set_goal:
+  - text: Do you want to set a goal ?
+    buttons:
+    - title: "Yes"
+      payload: '/yesset'
+    - title: "Not Now"
+      payload: '/dontset'
+  utter_check_again :
+  - text: Ok, sounds good. I will check  back with you in our next session about the smart goals.
+  utter_ask_start_game :
+  - text: Do you want to proceed with the mindfulness exercise? It is a short one, will only take 2-3 minutes
+    buttons:
+    - title: "Yes"
+      payload: '/Startgame'
+      
+    - title: "Not Now"
+      payload: '/denyStartgame'
+  utter_check_again_mindfullness :
+  - text: Ok, sounds good. I will check back with you in our next session about mindfulness.
+    
+  utter_ask_goals :
+  - text: Excellent! Let us then look at some well-being goals for you. Let’s pick a goal that you 
+         can achieve or make some progress on by the next session. 
+  utter_explain_goals1 :
+  - text: One good way to set a goal that we are very likely to achieve is to make it SMART. 
+  utter_explain_goals2 :
+  - text: A S.M.A.R.T. goal is defined as a goal that is Specific, Measurable, Achievable, Realistic, and Time-bound.
+  utter_ask_three_goals :
+  - text: What are three well-being goals that are you interested in working on first?
+  utter_goal1 :
+  - text: Enter your goal 1
+  utter_goal2 :
+  - text: Enter your goal 2
+  utter_goal3 :
+  - text: Enter your goal 3
+  utter_display_goals:
+  - text : Great! Which one do you want to work on first?
+    buttons:
+    - title: "Goal1"
+      payload: '/goal1'
+      
+    - title: "Goal2"
+      payload: '/goal2'
+
+    - title: "Goal3"
+      payload: '/goal3'
+  utter_display_goal1:
+  - text : It sounds like your goal is to [participant’s goal]. Is this correct? 
+    buttons:
+    - title: "Yes"
+      payload: '/affirm'
+      
+    - title: "No,let me rephrase"
+      payload: '/deny'
+  utter_rephrase_goal:
+  - text : Ok, rewrite your goal once more in a manner that you feel comfortable with
+  utter_setgoal1:
+  - text : Great! Let’s convert it into a SMART goal – shall we?
+  utter_setgoal2:
+  - text : As I mentioned, a SMART goal is one that is Specific, Measurable, Achievable, Realistic, and Timely. 
+  utter_setgoal3:
+  - text : Turning a broad goal into a SMART goal usually requires breaking it down into smaller steps that reflect the characteristics of a SMART goal.
+  utter_setgoal4:
+  - text : Let’s start with "specific". Read your goal and check, Is it specific? That means have you defined in a way that it is only one goal, is clear and not ambiguous to you? 
+  utter_setgoal5:
+  - text : For example, if I had a broad goal to strengthen my cooking skills.
+           A SMART goal would to be “attempt three new dinner recipes from my favorite cookbook this week”.
+           This goal is specific because it provides a clear idea of-
+           i. What I need to do (try three new recipes)
+           ii. When I need to do it (dinnertime)
+           iii. What supplies I will need (recipes from my favorite cookbook).  
+  utter_confirm_goalspecific:
+  - text :  Is your goal specific?
+    buttons:
+    - title: "Yes"
+      payload: '/yesgoalspecific'
+      
+    - title: "No,let me rephrase"
+      payload: '/notgoalspecific'
+  utter_rephrase_goalspecific:
+  - text : Ok…then lets work on making it a bit more specific. Rewrite your goal in such a manner that you can 
+           clearly measure whether you are progressing towards your goal or not.
+  utter_goalspecific_details:
+  - text : Great! Now lets look at measurability of your goal. Can your measure your goal easily? 
+           That is, do you have specific criteria that allows you to measure your progress toward the accomplishment of
+            the goal or determine when the goal has been achieved?
+  utter_goalspecific_details1:
+  - text : For example, my goal is measurable if it includes criteria for measuring my progress.
+           If I attempt all 3 recipes, then I will know I have reached my goal. 
+  utter_confirm_measuregoal:
+  - text : Can your measure your goal easily?
+    buttons:
+    - title: "Yes"
+      payload: '/yesmeasuregoal'
+      
+    - title: "No,let me rephrase"
+      payload: '/nomeasuregoal'
+  utter_rephrase_goalmeasure:
+  - text : Ok…then lets work on making it a bit more measurable. Rewrite your goal in such a manner that you can clearly measure 
+           whether you are progressing towards your goal or not. 
+  utter_goal_measuredetails1:
+  - text : Wonderful! Now lets look at the achievability of your goal.
+           That is, is your goal attainable and not impossible to achieve in a week's time? 
+  utter_goal_measuredetails2:
+  - text : For example, my goal is achievable if I have the time, money, and resources to buy the ingredients, look up a recipe,
+           and cook by the time frame I decide for myself.Also, I will need to make sure I have access to my favorite cookbook
+           and that I have room in my schedule to go out and purchase my ingredients and to try all three recipes.
+  utter_confirm_achievegoal:
+  - text : Is your goal achievable?
+    buttons:
+    - title: "Yes"
+      payload: '/achievable'
+      
+    - title: "No,let me rephrase"
+      payload: '/notachievable'
+  utter_rephrase_goalachievable:
+  - text : Ok…then lets work on making it a bit more achievable. Rewrite your goal in such a manner that you can achieve it in one week. 
+  utter_goal_achievable1:
+  - text : That’s awesome! Now lets look at how realistic your goal is. That is, is your goal within reach, realistic, and relevant to you? 
+  utter_goal_achievable2:
+  - text : For example, my goal is realistic if I have the minimum competencies to reach the goal within the time frame I set for myself will need to make sure I am motivated to accomplish this goal and I should make sure that I have some basic cooking skills. 
+  utter_confirm_realisticgoal:
+  - text : Is your goal realistic?
+    buttons:
+    - title: "Yes"
+      payload: '/realistic'
+      
+    - title: "No,let me rephrase"
+      payload: '/notrealistic'
+  
+  utter_rephrase_realistic:
+  - text : Ok…then lets work on making it a bit more realistic. Rewrite your goal such that you feel is possible to achieve 
+          in the time frame that we set. 
+  utter_goal_realistic:
+  - text : Super! Finaly lets look at how timely your goal is. That is, does your goal have a clearly defined timeline, including a start date and a target date?
+           For example, my cooking goal is timely, because I have a clear deadline - it is the end of this week.
+  utter_confirm_timely:
+  - text : Are your goals timely?
+    buttons:
+    - title: "Yes"
+      payload: '/timely'
+      
+    - title: "No,let me rephrase"
+      payload: '/nottimely'
+  
+  utter_rephrase_timely:
+  - text : Ok…then lets work on making it a bit more timely. Rewrite your goal such that you can complete or make 
+           progress on it by next session.
+  utter_goal_timely1:
+  - text : Success! You have created a well-being goal for this session that is SMART. Congratulations!!
+  utter_goal_challenge:
+  - text : Now, lets talk a little bit about the challenges that you may face in achieving this goal.
+  utter_goal_challenge1:
+  - text : Can you think of a challenge that might make it difficult for you to achieve this goal?
+
+
+
+
+
+
   utter_skip_to_activity_fb:
   - text: It looks like I am not able to fully understand what you are trying to tell me. That's okay, let's just skip to the activity.
   utter_after_severity_score:
@@ -247,9 +463,14 @@ actions:
 - action_get_panas_score
 - action_default_ask_affirmation
 - action_get_scope_counter
+- action_set_goal1
+- action_set_goal2
+- action_set_goal3
 # - action_default_fallback
 # - action_default_ask_rephrase
 # - action_severity_score
 - action_skip_to_activity
+- action_yesset
 forms:
 - severity_form_with_buttons
+
